--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Mi Landing Page</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page Demo</title>
+  <!-- Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-
-   <main class="container py-5">
-      <h1 class="text-center">Bienvenido a mi Landing Page</h1>
-      <p class="text-center text-muted">Aquí irá el contenido que iremos construyendo paso a paso.</p>
-   </main>
-
-   <!-- Bootstrap JS con Popper -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="container">
+    <h1 class="mt-5">Bienvenido a la Landing Page Demo</h1>
+    <p class="lead">¡Proyecto de práctica con Git y Bootstrap 5!</p>
+  </div>
 </body>
-
 </html>
