Agrega footer de Bootstrap a la landing page

--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
     <h1 class="mt-5">Bienvenido a la Landing Page Demo</h1>
     <p class="lead">¡Proyecto de práctica con Git y Bootstrap 5!</p>
   </div>
+  <!-- Footer de Bootstrap -->
+  <footer class="bg-dark text-white text-center py-4 mt-5">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 DemoGit. Todos los derechos reservados.</p>
+    </div>
+  </footer>
 </body>
 </html>
