Agrega sección de tarjetas (cards) de Bootstrap

--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
   <div class="container">
     <h1 class="mt-5">Bienvenido a la Landing Page Demo</h1>
     <p class="lead">¡Proyecto de práctica con Git y Bootstrap 5!</p>
+
+    <!-- Sección de tarjetas (cards) -->
+    <div class="row mt-5">
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="https://placehold.co/300x150" class="card-img-top" alt="Ejemplo 1">
+          <div class="card-body">
+            <h5 class="card-title">Tarjeta 1</h5>
+            <p class="card-text">Descripción breve de la tarjeta 1.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="https://placehold.co/300x150" class="card-img-top" alt="Ejemplo 2">
+          <div class="card-body">
+            <h5 class="card-title">Tarjeta 2</h5>
+            <p class="card-text">Descripción breve de la tarjeta 2.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="https://placehold.co/300x150" class="card-img-top" alt="Ejemplo 3">
+          <div class="card-body">
+            <h5 class="card-title">Tarjeta 3</h5>
+            <p class="card-text">Descripción breve de la tarjeta 3.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- Footer de Bootstrap -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
