--- a/index.html
+++ b/index.html
@@ -26,18 +26,21 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Acerca</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
   <div class="container">
-    <h1 class="mt-5">Bienvenido a la Landing Page Demo</h1>
+    <h1 class="mt-5">Landing Page con Footer Personalizado</h1>
     <p class="lead">¡Proyecto de práctica con Git y Bootstrap 5!</p>
   </div>
   <!-- Footer de Bootstrap -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <div class="container">
-      <p class="mb-0">&copy; 2025 DemoGit. Todos los derechos reservados.</p>
+      <p class="mb-0">&copy; 2025 DemoGit. Footer editado en la rama footer.</p>
     </div>
   </footer>
 </body>
