Cambia navbar, título y footer en la rama main

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             <a class="nav-link" href="#">Características</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Acerca</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
@@ -31,7 +37,7 @@
     </div>
   </nav>
   <div class="container">
-    <h1 class="mt-5">Bienvenido a la Landing Page Demo</h1>
+    <h1 class="mt-5">Landing Page con Cambios en Main</h1>
     <p class="lead">¡Proyecto de práctica con Git y Bootstrap 5!</p>
 
     <!-- Sección de tarjetas (cards) -->
@@ -93,7 +99,7 @@
   <!-- Footer de Bootstrap -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <div class="container">
-      <p class="mb-0">&copy; 2025 DemoGit. Todos los derechos reservados.</p>
+      <p class="mb-0">&copy; 2025 itinajero.dev. Footer editado en la rama main.</p>
     </div>
   </footer>
 </body>
